@@ -9,6 +9,11 @@
 
 	* run-tests.sh: Remove typo from comment and help text.
 
+2014-12-19  Anton Kolesov  <Anton.Kolesov@synopsys.com>
+
+	* dejagnu/baseboards/arc-sim-nsimdrv.exp: Update CPU C flags.
+	* dejagnu/baseboards/arc600-sim.exp: Same.
+
 2014-12-16  Anton Kolesov  <Anton.Kolesov@synopsys.com>
 
 	* build-elf32.sh: Fix documentation build problem on RHEL6.
